# rdp_tasks

./: README.md
task1/: ls  ls.cpp  support.cpp  support.h
task2/: CMakeLists.txt  Main.cpp  Makefile  Manager.cpp  Manager.h  MqttBrokerFake.h  MqttClientFake.cpp  MqttClientFake.h  remoteClient.h  robo.cpp  robo.h  utils.h
